fixes for mobile app alignment issues in iOS

--- a/MobileApp/www/css/style.css
+++ b/MobileApp/www/css/style.css
@@ -152,6 +152,15 @@ container-scroll::-webkit-scrollbar-thumb
 {
   padding-left: 5px !important;
 }
+.padding-left15
+{
+  padding-left: 15px !important;
+}
+button.ion-circle-icons
+{
+  width:40px !important;
+  height:40px !important;
+}
 .fnt-12
 {
   font-size: 12px !important;
